add url for book on web

--- a/book.html
+++ b/book.html
@@ -161,7 +161,7 @@
                 <li>
                     <img src="${booksArray[i].picture}" alt="">
                     <h3>${booksArray[i].name}</h3>
-                    <a href="jamb series remix physics.pdf" download><button>Download</button></a>
+                    <a href="https://drive.google.com/file/d/1kBWi1kaDe-m8ivYmUAgUq8reCyVCiNSh/view?usp=drive_link" download><button>Download</button></a>
                 </li>`
 
                 HTMLbook.push(book)
